upgrade to java 21 upgrade libraries fix double logging using java 21 virtual threads some intelij suggestions